--- a/src/components/Spinner.css
+++ b/src/components/Spinner.css
@@ -1,16 +1,30 @@
-.spinner {
-    width: 56px;
-    height: 56px;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    background: conic-gradient(#0000 10%,#474bff);
-    -webkit-mask: radial-gradient(farthest-side,#0000 calc(100% - 9px),#000 0);
-    animation: spinner-zp9dbg 1s infinite linear;
+.loader {
+   width: 48px;
+   height: 48px;
+   border-radius: 50%;
+   display: inline-block;
+   border-top: 4px solid #FFF;
+   border-right: 4px solid transparent;
+   box-sizing: border-box;
+   animation: rotation 1s linear infinite;
  }
- 
- @keyframes spinner-zp9dbg {
-    to {
-       transform: rotate(1turn);
-    }
+ .loader::after {
+   content: '';  
+   box-sizing: border-box;
+   position: absolute;
+   left: 0;
+   top: 0;
+   width: 48px;
+   height: 48px;
+   border-radius: 50%;
+   border-bottom: 4px solid #FF3D00;
+   border-left: 4px solid transparent;
  }
+ @keyframes rotation {
+   0% {
+     transform: rotate(0deg);
+   }
+   100% {
+     transform: rotate(360deg);
+   }
+ } 
